[package]
name = "astro"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at 
# https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "astro"
crate-type = ["cdylib"]

[dependencies]
nalgebra = "0.32.3"
ndarray = "0.15.6"
libc = "0.2"
chrono = "0.4.19"
cty = "0.2.2"
num-traits = "0.2"
thiserror = "1.0"
simba = "0.8"
once_cell = "1.6.0"
numpy = { version = "0.20.0", optional = true }
pyo3 = { version = "0.20.0", features = ["extension-module"], optional = true }
ureq = "2.9.1"


[build-dependencies]
cc = { version = "1.0.74", features = ["parallel"] }
chrono = "0.4.19"
pyo3-build-config = { version = "0.20.0", optional = true }

[dev-dependencies]
rand = "0.8.5"

[features]
default = ["pybindings"]
pybindings = ["pyo3", "numpy", "pyo3-build-config"]

[profile.test]
opt-level = 3
