[build-system]
requires = ["setuptools", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "satkit"
version = "0.15"
dependencies = ["datetime>=3.0", "numpy>=1.20.0"]
requires-python = ">= 3.8"
authors = [{ name = "Steven Michael", email = "ssmichael@gmail.com" }]
maintainers = [{ name = "Steven Michael", email = "ssmichael@gmail.com" }]
readme = "README.md"
description = "Satellite dynamics toolkit"
keywords = ["satellite", "orbit", "astrodynamics", "SGP4", "TLE"]

[tool.setuptools.packages]
find = { where = ["python"] }

[tool.cibuildwheel]
# Only build on CPython 3.12
container-engine = "docker"
build = "cp312-*"
environment = { PATH = "$PATH:$HOME/.cargo/bin" }

[tool.cibuildwheel.macos]
container-engine = "docker"
archs = ["x86_64", "arm64"]
before-build = [
    "pip install -U setuptools-rust",
    "rustup default stable",
    "rustup target add aarch64-apple-darwin",
    "rustup show",
]


[tool.cibuildwheel.linux]
archs = ["x86_64"]
skip = ["pp*", "*_i686", "*_s390x", "*_aarch64", "*_ppc64le", "*-musllinux*"]
before-build = [
    "pip install -U setuptools-rust",
    "curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain=stable --profile=minimal -y",
    "rustup show",
]

[tool.cibuildwheel.windows]
before-build = [
    "pip install -U setuptools-rust",
    "rustup toolchain install stable-i686-pc-windows-msvc",
    "rustup toolchain install stable-x86_64-pc-windows-msvc",
    "rustup default stable-x86_64-pc-windows-msvc",
    "rustup override set stable-x86_64-pc-windows-msvc",
    "rustup show",
]
archs = ["AMD64"]
skip = ["pp*"]
environment = { PATH = '$UserProfile\.cargo\bin;$PATH' }


[[tool.setuptools-rust.ext-modules]]
features = ["pybindings"]
args = ["--crate-type", "cdylib"]
target = "satkit/satkit"
path = "Cargo.toml"
binding = "PyO3"
py-limited-api = "auto"
